[package]
name = "miniflux-feed-combiner"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
axum = { version = "0.8.1", features = ["macros"] }
rss = "2.0.12"
miniflux_api = "0.7.2"
url = "2.5.4"
reqwest = "0.12.15"
anyhow = "1.0.97"
tokio = { version = "1.44.1", features = ["full"] }
thiserror = "2.0.12"
